<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flux</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Flux - Hello world!</string>
    <string name="scan_a_ticket">Scan a ticket</string>
    <string name="refresh_button_text">Refresh</string>
    <string name="more">...</string>
    <string name="loading">...</string>

    <string name="issue_status">Issue Status</string>
    <string name="assigned_to">Assigned to:</string>

    <string name="save_pref">Save Preferences</string>
    <string name="retrieve_pref">Retrieve Preference</string>
    <string name="show_text">Show Password While Typing</string>
    <string name="prompt_password">Password:</string>
    <string name="prompt_username">Username:</string>
    <string name="augmented_view">Augmented View</string>
    <string name="description">Description</string>
    <string name="comments">Comments</string>
    <string name="attachments">Attachments</string>

    <string name="pref_jira_category">JIRA Settings</string>
    <string name="pref_base_url">JIRA base URL</string>
    <string name="pref_base_url_summary">The URL to access your JIRA instance</string>
    <string name="pref_username">JIRA username</string>
    <string name="pref_username_summary">Your JIRA account username</string>
    <string name="pref_password">JIRA password</string>
    <string name="pref_password_summary">Your JIRA account password</string>
    <string name="pref_board">JIRA board</string>
    <string name="pref_board_summary">The JIRA scrum board to use. You\'ll need to find this ID in JIRA (For now)</string>
    <string name="unassigned">Unassigned</string>
    <string name="enter_value">Please enter a search value</string>
    <string name="issues">Issues</string>
    <string name="issue">Issue</string>
    <string name="issues_in_this_sprint">Issues in this sprint</string>
    <string name="could_not_load_sprint">Could not load sprint details</string>
    <string name="loading_sprint_info">Loading sprint</string>
    <string name="loading_sprint_burndown">Loading sprint burndown</string>
    <string name="burndown_chart">Burndown Chart</string>
    <string name="no_description">There is no description</string>
    <string name="no_comments">There are no comments</string>
    <string name="ellipse">...</string>
    <string name="no_attachments">There are no attachments</string>
    <string name="action_add_comment">Add a comment</string>
    <string name="action_edit">Edit</string>
    <string name="action_assign_user">Assign to user</string>
    <string name="action_refresh">Refresh</string>
    <string name="close">Close</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>

</resources>