<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--<item-->
        <!--android:id="@+id/action_edit_issue"-->
        <!--android:orderInCategory="15"-->
        <!--android:showAsAction="always"-->
        <!--android:icon="@drawable/ic_action_edit"-->
        <!--android:title="@string/action_edit" />-->

    <item
        android:id="@+id/action_assign_user"
        android:orderInCategory="20"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_add_person"
        android:title="@string/action_assign_user"/>

    <item
        android:id="@+id/action_add_comment"
        android:orderInCategory="25"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_chat"
        android:title="@string/action_add_comment"/>

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="90"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"/>

</menu>