<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/issue_description_header_text"
        android:text="@string/description"
        android:textAppearance="?android:textAppearanceMedium"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="8dip" />

    <TextView
        android:id="@+id/issue_description_empty_text"
        android:text="@string/no_description"
        android:textAppearance="?android:textAppearanceSearchResultTitle"
        android:textColor="@color/no_items_found"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dip" />

    <TextView
        android:id="@+id/issue_description"
        android:text="@string/ellipse"
        android:textAppearance="?android:textAppearance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left|top"
        android:padding="8dip" />

</LinearLayout>
